Fixed checkbox alignment issue in the legends panel

--- a/app/assets/stylesheets/old_elements/custom_objects.css.scss
+++ b/app/assets/stylesheets/old_elements/custom_objects.css.scss
@@ -566,6 +566,7 @@
     @include inline-block();
     vertical-align:middle;
     text-decoration:none;
+    line-height:1;
 
     span.check {
       position:relative;
